moved portfolio.html content to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-https://sriramsdk.github.io/my_portfolio_v2/
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Document</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background:"dcdcdc";
+        }
+        .image {
+            position: relative;
+            overflow: hidden;
+        }
+        .image img {
+            max-width: 100%;
+            max-height: 100%;
+            display: block;
+            margin: 0 auto;
+        }
+        #croppedImage {
+            max-width: 100%;
+            max-height: 100%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        .content-details{
+            font-size:18px;
+            font-family: "Garamond", Helvetica, serif;
+        }
+        .coding_logos{
+            max-width: 20%;
+            max-height: 20%;
+            position: relative;
+            overflow: hidden;
+        }
+        @media (max-width: 767px) {
+            .content-1{
+                width:90%;
+            }
+            .image {
+                width:93%;
+                border-radius: 50%;
+                height: 300px;
+            }
+        }
+    </style>
+</head>
+<body>
+<nav class="navbar navbar-dark bg-primary d-flex">
+    <div class="mx-5 mt-2">
+        <h4>Hai,I'm Sriram, Welcome to My Portfolio</h4>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="container bg-light bg-gradient mx-4 mt-3 col-8 rounded content-1" style="height: 400px;">
+            <div class="container content-details mt-2">
+                <p>I'm a Web Developer and also a Video and Photo editor, I'm Working as a Web developer for more than one year, I'm also running a Mashup Youtube Channel for more than 4 Years with 1.5K+ subscribers</p>
+            </div>
+            <div class="container content-details d-flex justify-content-center">
+                <p>My Skills in Coding</p>
+            </div>
+            <div class="container row d-flex justify-content-center">
+                <div class="coding_logos col-1">
+                    <img class="img-fluid" src="images/html_logo.png" alt="" style="width:50px;">
+                </div>
+                <div class="coding_logos col-1">
+                    <img class="img-fluid" src="images/css_logo.png" alt="" style="width:50px;">
+                </div>
+                <div class="coding_logos col-1 mt-1">
+                    <img class="img-fluid" src="images/bootstrap_logo.png" alt="" style="width:50px;">
+                </div>
+                <div class="coding_logos col-1">
+                    <img class="img-fluid" src="images/javascript_logo.png" alt="" style="width:70px;margin:-4px 0 0 0;">
+                </div>
+                <div class="coding_logos col-1">
+                    <img class="img-fluid" src="images/jquery_logo.png" alt="" style="width:40px;">
+                </div>
+                <div class="coding_logos col-1">
+                    <img class="img-fluid" src="images/php_logo.png" alt="" style="width:38px;">
+                </div>
+                <div class="coding_logos col-1">
+                    <img class="img-fluid" src="images/codeigniter_logo.png" alt="" style="width:60px;margin-top:-6px;">
+                </div>
+                <div class="coding_logos col-1">
+                    <img class="img-fluid" src="images/laravel_logo.png" alt="" style="width:50px;">
+                </div>
+            </div>
+        </div>
+        <div class="container bg-gradient mx-3 mt-3 col-3 d-flex rounded image">
+            <img class="rounded" id="croppedImage" src="images/profile_pic.JPG" alt="Example image">
+        </div>
+    </div>
+</div>
+</body>
+</html>
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function() {
+    // Get the dimensions of the div
+        var divWidth = $('.image').width();
+        var divHeight = $('.image').height();
+
+        // Set the image dimensions to match the div
+        $('#croppedImage').css({
+            'width': divWidth + 'px',
+            'height': divHeight + 'px',
+            'object-fit': 'cover' // Ensure the image covers the div without stretching
+        });
+    });
+
+</script> 
