--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Document</title>
@@ -37,75 +37,88 @@
             max-width: 20%;
             max-height: 20%;
             position: relative;
-            overflow: hidden;
+            /*overflow: hidden;*/
         }
         @media (max-width: 767px) {
+        	.header{
+	        	font-size:18px;
+	            font-family: "Garamond", Helvetica, serif;		
+        	}
             .content-1{
-                width:90%;
+                width:500px !important;
+                margin: auto !important;
+                margin-top: 20px !important;
             }
             .image {
-                width:93%;
+                width:93% !important;
                 border-radius: 50%;
-                height: 300px;
+                height: 200px;
+                margin-bottom: 20px !important;
             }
+            .profile_pic {
+			    width: 200.925px !important;
+			    height: 200px;
+			    object-fit: cover;
+			}
+            /*.coding_logos{
+            	max-width: 100% !important;
+            	max-height: 150px !important;
+            }*/
         }
     </style>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-primary d-flex">
-    <div class="mx-5 mt-2">
-        <h4>Hai,I'm Sriram, Welcome to My Portfolio</h4>
+    <div class="mx-2 mt-2 header">
+        <h5>Hai, I'm Sriram, Welcome to My Portfolio</h5>
     </div>
 </nav>
 <div class="container-fluid">
-    <div class="row">
-        <div class="container bg-light bg-gradient mx-4 mt-3 col-8 rounded content-1" style="height: 400px;">
-            <div class="container content-details mt-2">
+    <div class="row d-flex">
+        <div class="container bg-light bg-gradient mx-4 mt-3 col-10 rounded content-1" style="height: 400px;">
+            <div class="container content-details col-12 mt-2">
                 <p>I'm a Web Developer and also a Video and Photo editor, I'm Working as a Web developer for more than one year, I'm also running a Mashup Youtube Channel for more than 4 Years with 1.5K+ subscribers</p>
             </div>
             <div class="container content-details d-flex justify-content-center">
                 <p>My Skills in Coding</p>
             </div>
             <div class="container row d-flex justify-content-center">
-                <div class="coding_logos col-1">
+                <div class="coding_logos col-3 mx-1">
                     <img class="img-fluid" src="images/html_logo.png" alt="" style="width:50px;">
                 </div>
-                <div class="coding_logos col-1">
+                <div class="coding_logos col-3 mx-1">
                     <img class="img-fluid" src="images/css_logo.png" alt="" style="width:50px;">
                 </div>
-                <div class="coding_logos col-1 mt-1">
+                <div class="coding_logos col-3 mx-1">
                     <img class="img-fluid" src="images/bootstrap_logo.png" alt="" style="width:50px;">
                 </div>
-                <div class="coding_logos col-1">
+                <div class="coding_logos col-3 mx-1">
                     <img class="img-fluid" src="images/javascript_logo.png" alt="" style="width:70px;margin:-4px 0 0 0;">
                 </div>
-                <div class="coding_logos col-1">
+                <div class="coding_logos col-3 mx-1 mt-2">
                     <img class="img-fluid" src="images/jquery_logo.png" alt="" style="width:40px;">
                 </div>
-                <div class="coding_logos col-1">
+                <div class="coding_logos col-3 mx-1 mt-2">
                     <img class="img-fluid" src="images/php_logo.png" alt="" style="width:38px;">
                 </div>
-                <div class="coding_logos col-1">
+                <div class="coding_logos col-3 mx-1 mt-2">
                     <img class="img-fluid" src="images/codeigniter_logo.png" alt="" style="width:60px;margin-top:-6px;">
                 </div>
-                <div class="coding_logos col-1">
+                <div class="coding_logos col-3 mx-1 mt-2">
                     <img class="img-fluid" src="images/laravel_logo.png" alt="" style="width:50px;">
                 </div>
             </div>
         </div>
-        <div class="container bg-gradient mx-3 mt-3 col-3 d-flex rounded image">
-            <img class="rounded" id="croppedImage" src="images/profile_pic.JPG" alt="Example image">
+        <div class="container bg-gradient mx-3 mt-3 col-11 d-flex rounded-circle image">
+            <img class="rounded-circle profile_pic" id="croppedImage" src="images/profile_pic.JPG" alt="Example image">
         </div>
     </div>
 </div>
 </body>
 </html>
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script>
     $(document).ready(function() {
     // Get the dimensions of the div
