--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Sriram - Portfolio</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: "Garamond", Helvetica, Arial, sans-serif;
             background:"#000000";
         }
         .image {
@@ -32,7 +32,7 @@
         }
         .content-details{
             font-size:18px;
-            font-family: "Garamond", Helvetica, serif;
+            font-family: "Garamond", Helvetica, Arial, sans-serif;
         }
         .coding_logos{
             max-width: 20%;
@@ -43,7 +43,7 @@
         @media (max-width: 767px) {
         	.header{
 	        	font-size:18px;
-	            font-family: "Garamond", Helvetica, serif;		
+	            font-family: "Garamond", Helvetica, Arial, sans-serif;		
         	}
             .content-1{
                 width:500px !important;
