--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
     <title>Sriram - Portfolio</title>
     <style>
+    	@font-face {
+		    font-family: 'Garamond';
+		    src: url('path/to/garamond.woff2') format('woff2'),
+		         url('path/to/garamond.woff') format('woff');
+		    /* Add additional font formats if necessary */
+		}
         body {
             font-family: "Garamond", Helvetica, Arial, sans-serif;
             background:"#000000";
